# LeFaucon

./: CMakeCache.txt  README.md  h.txt
Características/Canny/: CMakeCache.txt  CMakeLists.txt  CannyEdgeDetector.cxx  CannyEdgeDetector.h  main.cxx
Características/HoughTransforms/Circles/: CMakeLists.txt  HoughCircles.cxx  HoughCircles.h  main.cxx
Características/HoughTransforms/Lines/: CMakeLists.txt  HoughLines.cxx  HoughLines.h  main.cxx
Características/HoughTransforms/Lines2/: CMakeLists.txt  lines.cxx
Características/PCA/: PCAImage.cxx
Características/Sobel/: Sobel.cxx
Características/Sobel 1/: CMakeLists.txt  Sobel.cxx  Sobel.h  main.cxx
Características/Texture/: CMakeLists.txt  HaralickFeatures.cxx
Características/TextureExtraction/: CMakeLists.txt  TextureExtraction.cxx
Preprocesamiento/Filters/GaussianFilters/: CMakeLists.txt  DiscreteGaussianFilter.cxx  DiscreteGaussianFilter.h  main.cxx
Preprocesamiento/Filters/MedianFilter/: CMakeLists.txt  MedianFilter.cxx  MedianFilter.h  main.cxx
Preprocesamiento/Filtro/Gaussianos/: CMakeLists.txt  GaussianoDiscreto.cxx
Preprocesamiento/Filtro/Mediana/: CMakeLists.txt  Mediana.cxx
Preprocesamiento/Image/BinaryImage/: BinaryImage.cxx  BinaryImage.h  CMakeLists.txt  main.cxx
Preprocesamiento/Image/HistogramOperations/: AdditionHistogram.cxx  CMakeLists.txt
Preprocesamiento/Image/HistogramOperations/AdditionHistogram/: AdditionHistogram.cxx  AdditionHistogram.h  main.cxx
Preprocesamiento/Image/HistogramOperations/HistogramEqualization/: CMakeLists.txt  HistogramEqualization.cxx  HistogramEqualization.h  main.cxx
Preprocesamiento/Image/HistogramOperations/HistogramStretching/: CMakeLists.txt  HistogramStretching.cxx  HistogramStretching.h  main.cxx
Preprocesamiento/Image/HistogramOperations/LogarithmicOperation/: LogarithmicOperationHistogram.cxx
Preprocesamiento/Image/HistogramOperations/MultiplicationHistogram/: CMakeLists.txt  MultiplicationHistogram.cxx  MultiplicationHistogram.h  main.cxx
Preprocesamiento/Image/HistogramOperations/NegativeImage/: CMakeLists.txt  NegativeImage.cxx  NegativeImage.h  main.cxx
Preprocesamiento/Image/Morphology/Dilation/: morphologyDilation.cxx
Preprocesamiento/Image/Morphology/Skeletizatioj/: morphologySkeletization.cxx
Preprocesamiento/Image/NoiseReductionFilters/: CMakeLists.txt  Noise-BinomialBlur.cxx  Noise-BinomialBlur.h  main.cxx
Preprocesamiento/Image/OperationsBetweenImages/: AddOperation.cxx
Preprocesamiento/Image/OperationsBetweenImages/AddiOperation/: AddOperation.cxx  AddOperation.h  CMakeLists.txt  main.cxx
Preprocesamiento/Image/OperationsBetweenImages/AverageOperation/: AveraFilter.cxx  AverageFilter.h  CMakeLists.txt  main.cxx
Preprocesamiento/Image/OperationsBetweenImages/SubsOperation/: CMakeLists.txt  SubsFilter.cxx  SubsFilter.h  main.cxx
Preprocesamiento/Image/Thresholding/: CMakeLists.txt  Thresholding.cxx  Thresholding.h  main.cxx
Preprocesamiento/Imagen/OperacionAdicion/: CMakeLists.txt
Preprocesamiento/Imagen/OperacionesDePunto/: CMakeLists.txt  Operaciones.cxx
Preprocesamiento/Imagen/Ruido/: CMakeList.txt  CMakeLists.txt  Ruido-BinomialBlur.cxx
Preprocesamiento/Imagen/Umbralizacion/: CMakeLists.txt  Umbralizacion.cxx
Saliency/BooleanMap/: AttentionMap.cxx  AttentionMap.h  BooleanMap.cxx  BooleanMap.h  BooleanMapTypes.h  CMakeLists.txt  main.cxx
Saliency/GVBS/: ActivationMap.cxx  ActivationMap2.cxx  CMakeLists.txt  Funcionamiento  GBVSImpl.cxx
Saliency/ICH/: CMakeLists.txt  ICH.cxx
Utils/GaussianPyramids/: GaussianPyramids.cxx  GaussianPyramids.h  main.cxx
Utils/ImageConvolution/: CMakeLists.txt  ImageConvolution.cxx  ImageConvolution.h  Kernels.txt  main.cxx
Utils/ShowParameters/: showParameters.cxx  showParameters.h
