cmake_minimum_required(VERSION 2.8)
project(TextureExtraction)
if(UNIX)
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=gnu++0x")
endif()
find_package(ITK REQUIRED)
include(${ITK_USE_FILE})
add_executable(TextureExtraction MACOSX_BUNDLE TextureExtraction.cxx)
target_link_libraries(TextureExtraction ${ITK_LIBRARIES})
