cmake_minimum_required(VERSION 2.8)
project(SaliencyBooleanMap)
if(UNIX)
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=gnu++0x")
endif()
find_package(ITK REQUIRED)
include(${ITK_USE_FILE})
add_executable(SaliencyBooleanMap MACOSX_BUNDLE main.cxx BooleanMapTypes.h BooleanMap.cxx BooleanMap.h AttentionMap.cxx AttentionMap.h)
target_link_libraries(SaliencyBooleanMap ${ITK_LIBRARIES})
