cmake_minimum_required(VERSION 2.8)
project(HoughCircles)
if(UNIX)
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=gnu++0x")
endif()
find_package(ITK REQUIRED)
include(${ITK_USE_FILE})
add_executable(HoughCircles MACOSX_BUNDLE HoughCircles.cxx)
target_link_libraries(HoughCircles ${ITK_LIBRARIES})
