cmake_minimum_required(VERSION 2.8)
project(HoughLines)
if(UNIX)
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=gnu++0x")
endif()
find_package(ITK REQUIRED)
include(${ITK_USE_FILE})
add_executable(HoughLines MACOSX_BUNDLE main.cxx HoughLines.cxx HoughLines.h)
target_link_libraries(HoughLines ${ITK_LIBRARIES})
