cmake_minimum_required(VERSION 2.8)
project(DiscreteGaussianFilter)
if(UNIX)
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=gnu++0x")
endif()
find_package(ITK REQUIRED)
include(${ITK_USE_FILE})
add_executable(DiscreteGaussianFilter MACOSX_BUNDLE main.cxx DiscreteGaussianFilter.cxx DiscreteGaussianFilter.h)
target_link_libraries(DiscreteGaussianFilter ${ITK_LIBRARIES})
