cmake_minimum_required(VERSION 2.8)
project(MedianFilter)
if(UNIX)
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=gnu++0x")
endif()
find_package(ITK REQUIRED)
include(${ITK_USE_FILE})
add_executable(MedianFilter MACOSX_BUNDLE MedianFilter.cxx MedianFilter.h main.cxx)
target_link_libraries(MedianFilter ${ITK_LIBRARIES})
