cmake_minimum_required(VERSION 2.8) 
project(Thresholding)
if(UNIX)
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=gnu++0x")
endif()
find_package(ITK REQUIRED)
include(${ITK_USE_FILE})
add_executable(Thresholding MACOSX_BUNDLE Thresholding.cxx)
target_link_libraries(Thresholding ${ITK_LIBRARIES})
