cmake_minimum_required(VERSION 2.8)
project(HistogramEqualization)
if(UNIX)
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=gnu++0x")
endif()
find_package(ITK REQUIRED)
include(${ITK_USE_FILE})
add_executable(HistogramEqualization MACOSX_BUNDLE main.cxx HistogramEqualization.cxx HistogramEqualization.h)
target_link_libraries(HistogramEqualization ${ITK_LIBRARIES})
