cmake_minimum_required(VERSION 2.8)
project(HistogramStretching)
if(UNIX)
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=gnu++0x")
endif()
find_package(ITK REQUIRED)
include(${ITK_USE_FILE})
add_executable(HistogramStretching MACOSX_BUNDLE main.cxx HistogramStretching.cxx HistogramStretching.h)
target_link_libraries(HistogramStretching ${ITK_LIBRARIES})
