cmake_minimum_required(VERSION 2.8) 
project(MultiplicationHistogram)
if(UNIX)
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=gnu++0x")
endif()
find_package(ITK REQUIRED)
include(${ITK_USE_FILE})
add_executable(MultiplicationHistogram MACOSX_BUNDLE MultiplicationHistogram.cxx)
target_link_libraries(MultiplicationHistogram ${ITK_LIBRARIES})
