cmake_minimum_required(VERSION 2.8) 
project(SubOperation)
if(UNIX)
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=gnu++0x")
endif()
find_package(ITK REQUIRED)
include(${ITK_USE_FILE})
add_executable(SubOperation MACOSX_BUNDLE SubsFilter.cxx)
target_link_libraries(SubOperation ${ITK_LIBRARIES})
